--- a/angular.json
+++ b/angular.json
@@ -54,6 +54,8 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+          },
           "configurations": {
             "production": {
               "buildTarget": "energy-dashboard:build:production"
