--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@primeuix/themes": "^1.2.3",
+    "chart.js": "^4.5.0",
+    "ng2-charts": "^8.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.1.1",
     "rxjs": "~7.8.0",
