Add Docker support with multi-stage builds for Angular application. Include Dockerfile, development Dockerfile, docker-compose configuration, and .dockerignore file. Update angular.json for Docker-specific build settings and add nginx configuration for production deployment.

--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,21 @@
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
+            },
+            "docker": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2MB",
+                  "maximumError": "5MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "20kB",
+                  "maximumError": "50kB"
+                }
+              ],
+              "outputHashing": "all"
             }
           },
           "defaultConfiguration": "production"
